--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./favicon.png" type="image/png" sizes="16x16" />
-    <title>Social media website using html,css,js - Octapia</title>
+    <title>Social media website</title>
     <!-- Styles  -->
     <link rel="stylesheet" href="./css/default.css" />
     <link rel="stylesheet" href="./css/fontawesome.min.css" />
